Refactor API and Store Structure
- Updated serverApi.ts to enhance user and story management functions, including logout, refresh, and fetching current user.
- Removed note-related functions and types as they are no longer needed.
- Modified authStore.ts to use IUser interface instead of User.
- Deleted noteStore.ts as it is no longer in use.
- Updated next.config.ts to allow requests to Cloudinary.
- Removed note types from types/note.ts.
- Expanded user types in types/user.ts to include IUser and related interfaces.
- Created new authentication routes for login and registration.
- Added pages for creating and editing stories.
- Implemented public and private routes for stories and travellers.
- Developed components for displaying stories, travellers, and user information.
- Created a confirm modal component for user actions.
- Added styles for various components.
- Implemented error handling and loading states in story details.

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,52 @@
+:root {
+  --font-nunito-sans: 'Nunito Sans', sans-serif;
+}
+
 body {
-  font-family:
-    -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-    Cantarell, 'Helvetica Neue', sans-serif;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+  font-family: var(--font-nunito-sans);
+  font-weight: 400;
+  background-color: #f7f9ff;
+  color: #000;
+  font-size: 18px;
+  line-height: 1.5;
+}
+
+.main {
+  flex: 1;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
   margin: 0;
-  background-color: #f8f9fa;
+}
+
+p:last-child {
+  margin-bottom: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+a {
+  color: currentColor;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+button {
+  cursor: pointer;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
