--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -1,28 +1,182 @@
-.sectionAbout {
-  background-color: aliceblue;
-}
-.aboutContent {
-  display: flex;
-  flex-direction: row;
-}
-.description {
-  background-color: aliceblue;
-}
-.featuresContainer {
-  display: flex;
-  flex-direction: row;
-  gap: 40px;
-}
-.features {
-  background-color: lavender;
+/* Section */
+.section {
+  background-color: var(--color-royal-blue-lightest);
+  padding: 64px 0;
+  width: 100%;
 }
 
+/* Container */
+.container {
+  width: 100%;
+  padding: 0 20px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 64px;
+}
+
+@media screen and (min-width: 375px) {
+  .container {
+    max-width: 375px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding: 0 32px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .container {
+    max-width: 1440px;
+    padding: 0 64px;
+  }
+}
+
+/* About Content */
+.aboutContent {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+@media screen and (min-width: 768px) {
+  .aboutContent {
+    flex-direction: row;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .aboutContent {
+    width: 100%;
+    gap: 40px;
+  }
+}
+
+/* Title */
+.title {
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.2;
+  letter-spacing: -0.01em;
+  color: var(--color-neutral-darkest);
+  margin: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .title {
+    font-size: 44px;
+    width: 340px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .title {
+    font-size: 52px;
+    width: 755px;
+  }
+}
+
+/* Description */
+.description {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--color-neutral-darkest);
+  margin: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .description {
+    height: 168px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .description {
+    padding: 8px 0px 0px;
+    font-size: 20px;
+    width: 533px;
+    height: 180px;
+  }
+}
+
+/* Features List */
+.featuresList {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+@media screen and (min-width: 768px) {
+  .featuresList {
+    flex-direction: row;
+    gap: 24px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .featuresList {
+    gap: 32px;
+  }
+}
+
+/* Feature Item */
 .feature {
-  background-color: lightyellow;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  align-items: flex-start;
 }
+
+@media screen and (min-width: 768px) {
+  .feature {
+    flex: 1;
+  }
+}
+
+/* Icon */
+.icon {
+  fill: var(--color-neutral-darkest);
+  color: var(--color-neutral-darkest);
+}
+
+/* Feature Title */
 .featureTitle {
-  background-color: lightskyblue;
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.3;
+  letter-spacing: -0.01em;
+  color: var(--color-neutral-darkest);
+  margin: 0;
 }
+
+@media screen and (min-width: 1440px) {
+  .featureTitle {
+    font-size: 32px;
+  }
+}
+
+/* Feature Description */
 .featureDescription {
-  background-color: lightsalmon;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--color-neutral-darkest);
+  margin: 0;
+}
+
+@media screen and (min-width: 1440px) {
+  .featureDescription {
+    font-size: 18px;
+  }
 }
