--- a/components/TravellersStoriesItem/TravellersStoriesItem.module.css
+++ b/components/TravellersStoriesItem/TravellersStoriesItem.module.css
@@ -5,11 +5,13 @@
   overflow: hidden;
   max-width: 421px;
   transition: background-color 0.3s ease;
+  display: flex;
+  flex-direction: column;
 }
 
 .mainImage {
   background-color: #dbdbdb;
-  object-fit: cover;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -17,6 +19,11 @@
 }
 
 .contentWrapper {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 24px;
   padding: 24px;
 }
 
@@ -30,12 +37,26 @@
   font-weight: 700;
   font-size: 18px;
   margin-bottom: 8px;
+  /*min-height: calc(1.5em * 2);*/
+
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .description {
   font-weight: 400;
   font-size: 16px;
   margin-bottom: 24px;
+  /*min-height: calc(1.5em * 3);*/
+
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .userWrapper {
@@ -133,4 +154,32 @@
 .showStory:active,
 .bookmarkStory:active {
   background-color: var(--button-active);
+}
+
+@media screen and (min-width: 768px) {
+  .storyCard {
+    flex-basis: calc((100% - 24px) / 2);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .storyCard {
+    flex-basis: calc((100% - 24px) / 3);
+  }
+
+  .category,
+  .favoriteCount,
+  .userName,
+  .date {
+    font-size: 16px;
+  }
+
+  .title {
+    font-size: 26px;
+  }
+
+  .description,
+  .showStory {
+    font-size: 18px;
+  }
 }
