--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -1,6 +1,6 @@
 /* Section */
 .section {
-  background-color: var(--color-royal-blue-lightest);
+  background-color: var(--background);
   padding: 64px 0;
   width: 100%;
 }
@@ -8,7 +8,7 @@
 /* Container */
 .container {
   width: 100%;
-  padding: 0 20px;
+  padding: 0 0px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -24,7 +24,7 @@
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
-    padding: 0 32px;
+    padding: 0px;
   }
 }
 
@@ -62,7 +62,7 @@
   font-size: 28px;
   line-height: 1.2;
   letter-spacing: -0.01em;
-  color: var(--color-neutral-darkest);
+  color: var(--text);
   margin: 0;
 }
 
@@ -86,7 +86,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
-  color: var(--color-neutral-darkest);
+  color: var(--text);
   margin: 0;
 }
 
@@ -144,7 +144,7 @@
 
 /* Icon */
 .icon {
-  fill: var(--color-neutral-darkest);
+  fill: var(--text);
   color: var(--color-neutral-darkest);
 }
 
@@ -155,7 +155,7 @@
   font-size: 20px;
   line-height: 1.3;
   letter-spacing: -0.01em;
-  color: var(--color-neutral-darkest);
+  color: var(--text);
   margin: 0;
 }
 
@@ -171,7 +171,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
-  color: var(--color-neutral-darkest);
+  color: var(--text);
   margin: 0;
 }
 
