Update Hero component: fix structure and styles

--- a/app/Home.module.css
+++ b/app/Home.module.css
@@ -4,6 +4,8 @@
     width: 100%;
     padding: 0 20px;
     margin: 0 auto;
+    position: relative;
+    z-index: 1;
   }
 }
 
@@ -13,6 +15,8 @@
     padding: 0 20px;
     margin: 0 auto;
     max-width: 375px;
+    position: relative;
+    z-index: 1;
   }
 }
 
@@ -21,6 +25,8 @@
   .container {
     max-width: 768px;
     padding: 0 32px;
+    position: relative;
+    z-index: 1;
   }
 }
 
@@ -29,5 +35,7 @@
   .container {
     max-width: 1440px;
     padding: 0 64px;
+    position: relative;
+    z-index: 1;
   }
 }
