--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -1,4 +1,4 @@
-/* Section */
+/* Hero Section */
 .section {
   position: relative;
   width: 100%;
@@ -108,40 +108,6 @@
         var(--opacity-neutral-darkest-20)
       ),
       url('/images/Hero/Hero2x.jpg');
-  }
-}
-
-/* Container */
-.container {
-  width: 100%;
-  padding: 0 20px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  position: relative;
-  z-index: 1;
-}
-
-@media screen and (min-width: 375px) {
-  .container {
-    max-width: 375px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 768px;
-    padding: 0 32px;
-    gap: 24px;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .container {
-    max-width: 1440px;
-    padding: 0 64px;
-    gap: 32px;
   }
 }
 
