--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -5,41 +5,12 @@
   width: 100%;
 }
 
-/* Container */
-.container {
-  width: 100%;
-  padding: 0 0px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  gap: 64px;
-}
-
-@media screen and (min-width: 375px) {
-  .container {
-    max-width: 375px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 768px;
-    padding: 0px;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .container {
-    max-width: 1440px;
-    padding: 0 64px;
-  }
-}
-
 /* About Content */
 .aboutContent {
   display: flex;
   flex-direction: column;
   gap: 24px;
+  margin-bottom: 64px;
 }
 
 @media screen and (min-width: 768px) {
