--- a/app/globals.css
+++ b/app/globals.css
@@ -87,6 +87,10 @@
   --button-hover: var(--color-royal-blue);
   --button-hover-text: var(--color-white);
   --button-active: var(--color-royal-blue-darker);
+  --button-solid: var(--color-royal-blue);
+  --button-solid-hover: var(--color-royal-blue-lighter);
+  --button-solid-active: var(--color-royal-blue-light);
+  --text-invert: var(--color-scheme-3-text);
   --background-footer: var(--color-scheme-3-background);
 }
 
@@ -103,6 +107,10 @@
   --button-hover: var(--color-royal-blue);
   --button-hover-text: var(--color-white);
   --button-active: var(--color-royal-blue-darker);
+  --button-solid: var(--color-royal-blue);
+  --button-solid-hover: var(--color-royal-blue-lighter);
+  --button-solid-active: var(--color-royal-blue-light);
+  --text-invert: var(--color-scheme-3-text);
   --background-footer: var(--color-scheme-2-background-footer);
 }
 
@@ -119,6 +127,10 @@
   --button-hover: var(--color-royal-blue-lighter);
   --button-hover-text: var(--color-scheme-1-text);
   --button-active: var(--color-royal-blue-light);
+  --button-solid: var(--color-white);
+  --button-solid-hover: var(--color-neutral);
+  --button-solid-active: var(--color-neutral-dark);
+  --text-invert: var(--color-scheme-1-text);
   --background-footer: var(--color-scheme-3-background-footer);
 }
 
