--- a/app/globals.css
+++ b/app/globals.css
@@ -81,7 +81,8 @@
   --accent: var(--color-scheme-1-accent);
   --foreground: var(--color-scheme-1-foreground);
   --input-text: var(--opacity-neutral-darkest-60);
-  --card: var(--color-scheme-2-background);
+  --card: var(--color-scheme-1-background);
+  --card-border: var(--opacity-transparent);
   --button: var(--opacity-neutral-darkest-5);
   --button-border: var(--color-scheme-2-border);
   --button-hover: var(--color-royal-blue);
@@ -101,7 +102,8 @@
   --accent: var(--color-scheme-2-accent);
   --foreground: var(--color-scheme-2-foreground);
   --input-text: var(--opacity-neutral-darkest-60);
-  --card: var(--color-scheme-1-background);
+  --card: var(--color-scheme-2-foreground);
+  --card-border: var(--opacity-transparent);
   --button: var(--opacity-neutral-darkest-5);
   --button-border: var(--color-scheme-2-border);
   --button-hover: var(--color-royal-blue);
@@ -122,6 +124,7 @@
   --foreground: var(--color-scheme-3-foreground);
   --input-text: var(--opacity-white-60);
   --card: var(--color-scheme-3-background);
+  --card-border: var(--color-scheme-3-border);
   --button: var(--opacity-white-10);
   --button-border: var(--opacity-transparent);
   --button-hover: var(--color-royal-blue-lighter);
