--- a/components/Auth/RegistrationForm/RegistrationForm.module.css
+++ b/components/Auth/RegistrationForm/RegistrationForm.module.css
@@ -133,7 +133,7 @@ input:-webkit-autofill:active {
 .submitBtn:focus:enabled {
   background: var(--color-royal-blue-lighter);
   border: 1px solid var(--color-royal-blue);
-  color:   color: #000;;
+  color: var(--color-black);
 }
 
 .submitBtn:disabled {
