--- a/components/TravellersStoriesItem/TravellersStoriesItem.module.css
+++ b/components/TravellersStoriesItem/TravellersStoriesItem.module.css
@@ -68,8 +68,15 @@
   margin-bottom: 24px;
 }
 
+.userInfoWrapper {
+  display: flex;
+  flex-direction: column;
+}
+
 .avatarImage {
-  border-radius: 100%;
+  border-radius: 50%;
+  width: 48px;
+  height: 48px;
 }
 
 .userName {
