--- a/components/ConfirmModal/ConfirmModal.module.css
+++ b/components/ConfirmModal/ConfirmModal.module.css
@@ -4,6 +4,7 @@
 }
 
 .btnButton {
+  fill: var(--text);
   position: absolute;
   top: 20px;
   right: 20px;
@@ -26,7 +27,7 @@
   line-height: 120%;
   letter-spacing: -0.01em;
   text-align: center;
-  color: var(--color-scheme-1-text);
+  color: var(--text);
   margin-bottom: 16px;
 }
 
@@ -36,19 +37,19 @@
   font-size: 16px;
   line-height: 150%;
   text-align: center;
-  color: var(--color-scheme-1-text);
+  color: var(--text);
 }
 
 .btnCancel {
   padding: 12px 123px;
   background: var(--opacity-neutral-darkest-5);
-  border: 1px solid var(--color-scheme-2-border);
+  border: 1px solid var(--border);
   border-radius: 8px;
   font-family: var(--font-family);
   font-weight: 500;
   font-size: 16px;
   line-height: 150%;
-  color: var(--color-neutral-darkest);
+  color: var(--text);
   margin-bottom: 24px;
   max-width: 295px;
   display: inline-flex;
