--- a/components/MobileMenu/MobileMenu.module.css
+++ b/components/MobileMenu/MobileMenu.module.css
@@ -14,7 +14,7 @@
 .menuContent {
   width: 100%;
   height: 100%;
-  background-color: var(--color-white);
+  background-color: var(--background);
   padding: 32px 24px;
   overflow-y: auto;
   display: flex;
@@ -43,13 +43,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
-  border: 1px solid rgba(0, 0, 0, 0.15);
+  fill: var(--text);
+  border: 1px solid var(--border);
   border-radius: 8px;
   padding: 4px;
   width: 32px;
   height: 32px;
-  background: rgba(0, 0, 0, 0.05);
+  background: var(--opacity-neutral-darkest-5);
 }
 .menuNav {
   display: flex;
@@ -62,7 +62,7 @@
 .menuLink {
   display: block;
   text-decoration: none;
-  color: var(--color-black);
+  color: var(--text);
   font-size: 16px;
   font-weight: 500;
   text-align: center;
@@ -88,8 +88,8 @@
 }
 .menuButtonLogin {
   background-color: var(--color-white);
-  color: var(--color-black);
-  border: 1px solid rgba(0, 0, 0, 0.15);
+  color: var(--color-neutral-darkest);
+  border: 1px solid var(--border);
   padding: 4px 0;
   max-width: 335px;
 }
@@ -168,4 +168,5 @@
 }
 .logoutButtonSvg {
   display: flex;
+  fill: var(--text);
 }
