--- a/components/Modal/Modal.module.css
+++ b/components/Modal/Modal.module.css
@@ -12,7 +12,7 @@
 }
 
 .modal {
-  background: var(--color-scheme-2-background);
+  background: var(--background);
   padding: 64px 20px 20px 20px;
   border-radius: 24px;
   max-width: 335px;
