--- a/components/TravellerInfo/TravellerInfo.module.css
+++ b/components/TravellerInfo/TravellerInfo.module.css
@@ -24,7 +24,7 @@
   font-size: 20px;
   line-height: 130%;
   letter-spacing: -0.01em;
-  color: var(--color-scheme-2-text);
+  color: var(--text);
   text-align: center;
   margin-bottom: 8px;
 }
@@ -34,7 +34,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 150%;
-  color: var(--color-scheme-2-text);
+  color: var(--text);
   text-align: center;
 }
 
