--- a/app/(main-layout)/(public routes)/travellers/Travellers.module.css
+++ b/app/(main-layout)/(public routes)/travellers/Travellers.module.css
@@ -4,28 +4,26 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 150%;
-  color: var(--color-white);
-  border: 1px solid var(--color-royal-blue);
+  color: var(--text-invert);
+  border: 1px solid var(--button-solid);
   border-radius: 8px;
   padding: 6px 12px;
   width: 100%;
   height: 48px;
-  background-color: var(--color-royal-blue);
+  background-color: var(--button-solid);
   margin: 0 auto;
   margin-bottom: 64px;
 }
 
 .paginateButton:hover,
 .paginateButton:focus {
-  background-color: var(--color-royal-blue-lighter);
-  border-color: var(--color-royal-blue);
-  color: var(--color-scheme-2-text);
+  background-color: var(--button-solid-hover);
+  color: var(--text);
 }
 
 .paginateButton:active {
-  background-color: var(--color-royal-blue-light);
-  border-color: var(--color-royal-blue);
-  color: var(--color-scheme-2-text);
+  background-color: var(--button-solid-active);
+  color: var(--text);
 }
 
 @media screen and (min-width: 768px) {
