--- a/components/TravellersList/TravellersList.module.css
+++ b/components/TravellersList/TravellersList.module.css
@@ -5,8 +5,8 @@
   line-height: 110%;
   letter-spacing: -0.01em;
   text-align: center;
-  color: var(--color-scheme-1-text);
-  margin: 32 auto 24px;
+  color: var(--text);
+  margin: 32px auto 24px;
 }
 
 .list {
@@ -23,7 +23,7 @@
   width: 100%;
   min-height: 363px;
   min-width: 250px;
-  background: var(--color-scheme-2-foreground);
+  background: var(--card);
   display: flex;
   flex-direction: column;
 }
@@ -43,7 +43,7 @@
   font-weight: 600;
   font-size: 18px;
   line-height: 150%;
-  color: var(--color-scheme-2-text);
+  color: var(--text);
   margin-bottom: 16px;
   display: -webkit-box;
   -webkit-line-clamp: 1;
@@ -57,7 +57,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 150%;
-  color: var(--color-scheme-2-text);
+  color: var(--text);
   margin-bottom: 16px;
   display: -webkit-box;
   -webkit-line-clamp: 3;
@@ -74,26 +74,26 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 150%;
-  color: var(--color-neutral-darkest);
-  border: 1px solid var(--color-scheme-2-border);
+  color: var(--text);
+  border: 1px solid var(--button-border);
   border-radius: 8px;
   padding: 6px 12px;
   width: 100%;
   height: 48px;
-  background: var(--opacity-neutral-darkest-5);
+  background: var(--button);
 }
 
 .button:hover,
 .button:focus {
-  background-color: var(--color-royal-blue);
+  background-color: var(--button-hover);
   border-color: var(--opacity-transparent);
-  color: var(--color-white);
+  color: var(--button-hover-text);
 }
 
 .button:active {
-  background-color: var(--color-royal-blue-darker);
+  background-color: var(--button-active);
   border-color: var(--opacity-transparent);
-  color: var(--color-white);
+  color: var(--button-hover-text);
 }
 
 @media screen and (min-width: 768px) {
